--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
   "author": "seckie",
   "license": "MIT",
   "devDependencies": {
+    "assert": "^1.4.1",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-es2015-modules-umd": "^6.18.0",
+    "babel-register": "^6.22.0",
     "browser-sync": "^2.18.6",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-exclude-gitignore": "^1.1.1",
+    "gulp-mocha": "^3.0.1",
     "gulp-notify": "^2.2.0",
-    "gulp-webpack": "^1.5.0"
+    "gulp-webpack": "^1.5.0",
+    "mocha": "^3.2.0"
   },
   "dependencies": {
     "lodash": "^4.17.4"
