--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "gulp-mocha": "^3.0.1",
     "gulp-notify": "^2.2.0",
     "gulp-webpack": "^1.5.0",
+    "karma": "^1.4.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-html2js-preprocessor": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-webpack": "^2.0.1",
     "mocha": "^3.2.0"
   },
   "dependencies": {
