--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-html2js-preprocessor": "^1.1.0",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.2",
     "karma-webpack": "^2.0.1",
     "mocha": "^3.2.0"
   },
