Update eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,9 @@
     "sourceType": "module",
     "ecmaVersion": 6
   },
+  "globals": {
+    "__html__": true
+  },
   "rules": {
     "indent": [
       "error",
